--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,45 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+.container {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: black;
+}
+.calculator {
+    padding: 20px;
+    border-radius: 10px;
+    background-color: rgb(211, 211, 211);
+}
+
+form input {
+    border: none;
+    outline: 0;
+    width: 60px;
+    height: 60px;
+    font-size: 16px;
+    background-color: rgb(255, 42, 0);
+    margin: 2px;
+    border-radius: 10px;
+    color: white;
+    font-weight: bolder;
+    cursor: pointer;
+  }
+  input:active {
+    box-shadow: inset 1px 1px 1px #c5c5c5, inset -1px -1px 1px #ffffff;
+  }
+  form .display {
+    display: flex;
+    justify-content: flex-end;
+    margin: 5px 0px 15px 0px;
+  }
+  form .display input {
+    text-align: right;
+    flex: 1;
+    font-size: 40px;
+    padding: 5px 10px;
+    background-color: rgb(64, 64, 64);
+  }
